--- a/index.html
+++ b/index.html
@@ -100,9 +100,10 @@
             <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Loading Page</h5>
-                        <p class="card-text">In this project I have developed a page which features a landing page which shows loading animation.</p>
-                        <a href="https://haider14-9abbaas.github.io/Loading-Animation-Page/" class="btn btn-primary" target="_blank">GitHub Repository</a>
+                        <h5 class="card-title">Eidi Distribution Web-App</h5>
+                        <p class="card-text">Streamline the tradition of sharing joy and celebration effortlessly with Eidi Distribution Web-App created via HTML,CSS and Javascript.Fostering connections and spreading smiles during festive occasions of holy month of Shawwal.</p>
+                        <a href="https://haider14-9abbaas.github.io/Eidi-Distribution-Web-App/
+                        " class="btn btn-primary" target="_blank">GitHub Repository</a>
                     </div>
                 </div>
             </div>
@@ -110,8 +111,8 @@
             <div class="col-lg-4 col-md-6 col-sm-12mb-4">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Facebook Login/Signup Page</h5>
-                        <p class="card-text">In this project I have developed a page features a log in/sign up page of Facebook created with HTML5 and CSS3.</p>
+                        <h5 class="card-title">Facebook Login/Signup Page Clone</h5>
+                        <p class="card-text">Immerse yourself in the essence of Facebook through Facebook Login/Signup Page Clone,crafted with HTML and CSS. Experience seamless navigation through login/signup processes.Recreated with precision and attention to detail.</p>
                         <a href="https://resplendent-gumdrop-ed4cbe.netlify.app/" class="btn btn-primary" target="_blank">GitHub Repository</a>
                     </div>
                     </div>
@@ -120,12 +121,21 @@
             <div class="col-lg-4 col-md-6 col-sm-6 mb-4">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">My Resume</h5>
-                        <p class="card-text">This project contains a landing page website which features my Resume created with HTML5 and CSS3</p>
-                        <a href="https://haider14-9abbaas.github.io/Resume-Template/" class="btn btn-primary" target="_blank">GitHub Repository</a>
+                        <h5 class="card-title">Github Homepage Clone</h5>
+                        <p class="card-text">Dive into my GitHub Homepage Clone it's a faithful rendition of GitHub's interface, offering a sleek and intuitive browsing experience. Seamlessly navigating repositories, user profiles, and trending projects, it brings the essence of GitHub to life with finesse.</p>
+                        <a href="https://github.com/haider14-9abbaas/Github-Homepage-Clone" class="btn btn-primary" target="_blank">GitHub Repository</a>
                     </div>
                 </div>
             </div>
+            <div class="col-lg-4 col-md-6 col-sm-12mb-4">
+                <div class="card">
+                    <div class="card-body" id="port4">
+                        <h5 class="card-title">Hotel Reservation System</h5>
+                        <p class="card-text">Discover my C++ Hotel Reservation System.A seamless solution for booking rooms, managing amenities, and generating receipts. With intuitive features and robust functionality, it enhances the hospitality experience for both guests and administrators alike</p>
+                        <a href="https://github.com/haider14-9abbaas/Hotel-Reservation-System-C-" class="btn btn-primary"  target="_blank">GitHub Repository</a>
+                    </div>
+                    </div>
+                    </div>
             <!-- Add more portfolio items as needed -->
         </div>
     </div>
@@ -164,6 +174,9 @@
                 <p>Email: haiderzaidi290@gmail.com</p>
                 <p>Phone: +92-3363036197</p>
                 <p>Address: House #123 ABC Street,Karachi,Pakistan.</p>
+                <p><a href="c:\Users\SJ Computers\Desktop\resume.docx" download><button id="downloadBtn">Download CV</button></a></p>
+                
+                
                 <div class="col-md-6">
                     <br>
                     <br>
