--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 <p>Email: haiderzaidi290@gmail.com</p>
                 <p>Phone: +92-3363036197</p>
                 <p>Address: House #123 ABC Street,Karachi,Pakistan.</p>
-                <p><a href="c:\Users\SJ Computers\Desktop\resume.docx" download><button id="downloadBtn">Download CV</button></a></p>
+                <p><a href="https://docs.google.com/document/d/1dVtRP6VnHXvqh1hZSQvKqhrh7QFidVjK/edit?usp=drive_link&ouid=117431377946953981873&rtpof=true&sd=true" download><button id="downloadBtn">Download CV</button></a></p>
                 
                 
                 <div class="col-md-6">
